# MainColor

./: CMakeLists.txt  Makefile  create.json  readme.md
src/: main.c
